syntax = "proto3";

package state.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/louisbranch/fracturing.space/api/gen/go/state/v1;statev1";

// Session represents a gameplay session within a campaign.
message Session {
  string id = 1;
  string campaign_id = 2;
  string name = 3;
  SessionStatus status = 4;
  google.protobuf.Timestamp started_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  google.protobuf.Timestamp ended_at = 7;
  int64 version = 8;
}

enum SessionStatus {
  SESSION_STATUS_UNSPECIFIED = 0;
  SESSION_ACTIVE = 1;
  SESSION_ENDED = 2;
}

// SessionService manages session lifecycle.
service SessionService {
  // Start a new session for a campaign.
  // Enforces at most one ACTIVE session per campaign.
  rpc StartSession(StartSessionRequest) returns (StartSessionResponse);

  // List sessions for a campaign.
  rpc ListSessions(ListSessionsRequest) returns (ListSessionsResponse);

  // Get a session by campaign ID and session ID.
  rpc GetSession(GetSessionRequest) returns (GetSessionResponse);

  // End a session by campaign ID and session ID.
  rpc EndSession(EndSessionRequest) returns (EndSessionResponse);

}

message StartSessionRequest {
  // The campaign ID to start a session for.
  string campaign_id = 1;

  // Optional free-form name for the session.
  string name = 2;
}

message StartSessionResponse {
  Session session = 1;
}

message ListSessionsRequest {
  // The campaign ID to list sessions for.
  string campaign_id = 1;

  // The maximum number of sessions to return.
  // If zero, the server defaults to 10. The server clamps values above 10 to 10.
  int32 page_size = 2;

  // A page token received from a prior ListSessionsResponse.
  string page_token = 3;
}

message ListSessionsResponse {
  repeated Session sessions = 1;
  string next_page_token = 2;
}

message GetSessionRequest {
  // The campaign ID.
  string campaign_id = 1;

  // The session ID.
  string session_id = 2;
}

message GetSessionResponse {
  Session session = 1;
}

message EndSessionRequest {
  // The campaign ID.
  string campaign_id = 1;

  // The session ID.
  string session_id = 2;
}

message EndSessionResponse {
  Session session = 1;
}
